# spellquest

./: .hgignore  CMakeLists.txt
doc/: gamedoc.txt  spells.txt
src/resource/: libfileaccess.cpp  libfileaccess.h  loadhandall.h  loadhandgeneric.h  overview.txt  resource.cpp  resource.h
utils/: spellbuilder.rb  test.xml
